--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "build": "gulp"
   },
   "dependencies": {
-    "axios": "0.17.1",
+    "axios": "^0.17.1",
     "babel-plugin-component": "0.10.1",
     "babel-polyfill": "6.26.0",
     "element-ui": "2.8.2",
-    "gulp": "3.9.1",
     "gulp-concat": "2.6.1",
     "gulp-load-plugins": "1.5.0",
     "gulp-replace": "0.6.1",
@@ -29,6 +28,7 @@
     "sass-loader": "6.0.6",
     "svg-sprite-loader": "3.7.3",
     "vue": "2.5.16",
+    "vue-axios": "^3.2.5",
     "vue-cookie": "1.1.4",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
@@ -63,6 +63,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "1.1.4",
     "friendly-errors-webpack-plugin": "1.6.1",
+    "gulp": "^4.0.2",
     "html-webpack-plugin": "2.30.1",
     "jest": "21.2.0",
     "jest-serializer-vue": "0.3.0",
